--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -12,9 +12,15 @@ input[type="search"] {
   box-sizing: inherit;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
+
 body {
-  font-size: $font-size-base;
-  font-family: $font-family-sans-serif;
+  font-size: 14px;
+  font-family: $body-font;
   line-height: $line-height-base;
 }
 
@@ -39,9 +45,7 @@ pre {
 }
 
 button {
-  background: transparent;
-  border: 0;
-  padding: 0;
+  padding: 10px 20px;
 }
 
 button:focus {
@@ -62,8 +66,6 @@ iframe {
 ol,
 ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
 }
 
 //
