--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,5 @@
 // Theme
 @import "variables";
-
 // Reset
 @import "normalize";
 @import "base";
@@ -8,4 +7,6 @@
 
 //layout
 @import "hero";
+@import "latest-news";
+@import "carousel";
 @import "selling-points";
