--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,16 @@
 .btn {
-  width: 365px;
   border: 2px solid black;
-  padding: 1em 5em;
+  padding: 1em 0;
   text-transform: uppercase;
   text-align: center;
   display: block;
+  width: 250px;
+}
+
+@media (min-width: 650px) {
+  .btn {
+    width: 325px;
+  }
 }
 
 .button-wrap:hover {
@@ -28,13 +34,23 @@
   background: #00C9FF;
 }
 
+nav {
+  list-style: none;
+}
+
 .shaddow {
-  width: 365px;
   height: 51px;
   transform: translate(-5px, -44px);
   z-index: -1;
   position: absolute;
   border: 2px solid black;
+  width: 250px;
+}
+
+@media (min-width: 650px) {
+  .shaddow {
+    width: 325px;
+  }
 }
 
 html {
@@ -261,7 +277,6 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   box-sizing: border-box;
-  font-size: 16px;
 }
 
 *,
@@ -311,6 +326,11 @@ button:focus {
   outline: 5px auto -webkit-focus-ring-color;
 }
 
+h2 {
+  font-size: 35px;
+  font-weight: 400;
+}
+
 fieldset {
   border: 0;
   margin: 0;
@@ -328,6 +348,8 @@ ul {
 
 nav ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 img {
@@ -351,17 +373,27 @@ textarea,
 }
 
 .header {
-  padding: 2em 4em;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: justify;
       justify-content: space-between;
   -ms-flex-align: center;
       align-items: center;
+  padding: 1em;
+}
+
+@media (min-width: 650px) {
+  .header {
+    padding: 2em 4em;
+  }
 }
 
 .header .logo img {
   height: 66px;
+}
+
+.header .nav-wrapper {
+  display: none;
 }
 
 .header .nav-wrapper ul ul {
@@ -404,8 +436,94 @@ textarea,
   width: 100%;
 }
 
+.menu-toggle {
+  display: block;
+  margin-right: 18px;
+  height: 15px;
+}
+
+@media (min-width: 840px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+.menu-toggle .line {
+  display: -ms-flexbox;
+  display: flex;
+  width: 35px;
+  height: 1px;
+  margin-bottom: 7px;
+  position: relative;
+  border-radius: 3px;
+  background: black;
+  z-index: 100;
+  transform-origin: 8px -2px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+
+.mobile-nav-container {
+  display: none;
+}
+
+.mobile-menu {
+  margin: 30px 0;
+  height: 500px;
+  width: 100%;
+  padding: 0;
+}
+
+.mobile-menu ul {
+  margin-bottom: 10px;
+}
+
+.mobile-menu-open {
+  position: absolute;
+  right: 0;
+  background: #00C9FF;
+  top: 84px;
+  display: block;
+  width: 100%;
+  text-align: center;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  text-transform: uppercase;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+}
+
+.mobile-menu-open nav {
+  width: 300px;
+}
+
+.mobile-menu-open nav li {
+  padding: 10px 0;
+}
+
+.menu-open .one {
+  opacity: 1;
+  transform: rotate(45deg) translate(-3px, -1px);
+}
+
+.menu-open .three {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+.menu-open .two {
+  transform: rotate(-45deg) translate(-5px, -2px);
+}
+
 .hero {
-  padding: 3em 5em;
+  padding: 2em;
+}
+
+@media (min-width: 650px) {
+  .hero {
+    padding: 3em 8em;
+  }
 }
 
 .hero .hero-wrap {
@@ -413,13 +531,26 @@ textarea,
   display: flex;
   -ms-flex-pack: space-evenly;
       justify-content: space-evenly;
-  padding: 0 0 5em 5em;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -ms-flex-align: center;
       align-items: center;
 }
 
+@media (min-width: 650px) {
+  .hero .hero-wrap {
+    padding: 0 0 5em 5em;
+  }
+}
+
 .hero .hero-wrap img {
-  width: 60%;
+  width: 90%;
+}
+
+@media (min-width: 650px) {
+  .hero .hero-wrap img {
+    width: 60%;
+  }
 }
 
 .hero .hero-wrap .copy {
@@ -429,9 +560,15 @@ textarea,
 }
 
 .hero .hero-wrap .copy h2 {
-  font-size: 60px;
   font-family: "spacegrotesk-light", sans-serif;
   font-weight: 500;
+  font-size: 30px;
+}
+
+@media (min-width: 650px) {
+  .hero .hero-wrap .copy h2 {
+    font-size: 60px;
+  }
 }
 
 .hero .hero-wrap .copy h2:nth-child(2) {
@@ -441,8 +578,15 @@ textarea,
 }
 
 .hero .hero-wrap .copy .large {
-  font-size: 20px;
-  margin-top: 2em;
+  font-size: 18px;
+  margin-top: 1em;
+}
+
+@media (min-width: 650px) {
+  .hero .hero-wrap .copy .large {
+    margin-top: 2em;
+    font-size: 20px;
+  }
 }
 
 .hero .button-section {
@@ -450,11 +594,247 @@ textarea,
   display: flex;
   -ms-flex-pack: space-evenly;
       justify-content: space-evenly;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.hero .button-section .btn {
+  margin-top: 2em;
+}
+
+.latest-news {
+  padding: 2em;
+}
+
+@media (min-width: 650px) {
+  .latest-news {
+    padding: 3em 8em;
+  }
+}
+
+.latest-news .title {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-bottom: 2em;
+}
+
+.latest-news .title h2 {
+  padding-bottom: 20px;
+}
+
+@media (min-width: 650px) {
+  .latest-news .title h2 {
+    padding-bottom: 2em;
+  }
+}
+
+.latest-news .title .view {
+  border: 2px solid black;
+  height: 40px;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100px;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: space-evenly;
+      justify-content: space-evenly;
+}
+
+.latest-news .title .view:hover .arrow {
+  transform: scale(1.3);
+}
+
+.latest-news .title .arrow:after {
+  content: "";
+  display: inline-block !important;
+  width: 0;
+  height: 0;
+  border-left: 8px solid #00C9FF;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  vertical-align: middle;
+}
+
+.latest-news .title .arrow:before {
+  width: 10px;
+  height: 2px;
+  background: #00C9FF;
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.latest-news .articles {
+  display: -ms-flexbox;
+  display: flex;
+  gap: 3%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+@media (max-width: 650px) {
+  .latest-news .articles .article {
+    margin-bottom: 2em;
+  }
+}
+
+@media (min-width: 650px) {
+  .latest-news .articles .article {
+    -ms-flex: 28%;
+        flex: 28%;
+  }
+}
+
+.latest-news .articles .article p {
+  font-size: 25px;
+  line-height: 1.2;
+}
+
+.latest-news .articles .article .date {
+  font-size: 11px;
+  padding: 1em 0;
+}
+
+.latest-news .cta-block {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  border: 2px solid black;
+  padding: 1em;
+}
+
+@media (min-width: 650px) {
+  .latest-news .cta-block {
+    margin-top: 7em;
+    padding: 3em;
+  }
+}
+
+.latest-news .cta-block .btn {
+  margin-top: 3em;
+  width: 250px;
+}
+
+.latest-news .cta-block .shaddow {
+  width: 250px;
+}
+
+.latest-news .cta-block h3 {
+  font-size: 25px;
+  font-weight: 400;
+}
+
+.carousel {
+  display: -ms-flexbox;
+  display: flex;
+  background: #00C9FF;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-pack: center;
+      justify-content: center;
+}
+
+@media (min-width: 650px) {
+  .carousel {
+    padding: 3em 8em;
+  }
+}
+
+.carousel .mySlides {
+  padding: 5em 0;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-align: center;
+      align-items: center;
+}
+
+.carousel .mySlides h2 {
+  font-size: 30px;
+  text-transform: uppercase;
+  margin-top: 30px;
+}
+
+@media (min-width: 650px) {
+  .carousel .mySlides h2 {
+    font-size: 70px;
+  }
+}
+
+.carousel .mySlides p {
+  padding: 3em 0;
+  text-align: center;
+  width: 90%;
+}
+
+@media (min-width: 650px) {
+  .carousel .mySlides p {
+    width: 50%;
+  }
+}
+
+.carousel .mySlides img {
+  width: 150px;
+  height: 150px;
+}
+
+.carousel .mySlides .button-wrap {
+  z-index: 10;
+}
+
+.carousel .slideshow-container {
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  margin: auto;
+}
+
+.carousel .dot {
+  height: 15px;
+  cursor: pointer;
+  width: 15px;
+  margin: 0 2px;
+  border-radius: 50%;
+  display: inline-block;
+  border: 2px solid black;
+  transition: background-color 0.6s ease;
+}
+
+.carousel .active {
+  background-color: #F2FF00;
+}
+
+.carousel .fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: .4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .carousel .text {
+    font-size: 11px;
+  }
 }
 
 .selling-points {
-  padding: 3em 5em;
-  padding: 300px 0 100px 0;
   background: #00C9FF;
   display: -ms-flexbox;
   display: flex;
@@ -462,6 +842,13 @@ textarea,
       flex-direction: column;
   -ms-flex-pack: center;
       justify-content: center;
+  padding: 150px 0 100px 0;
+}
+
+@media (min-width: 650px) {
+  .selling-points {
+    padding: 300px 0 100px 0;
+  }
 }
 
 .selling-points .wrap {
@@ -469,7 +856,13 @@ textarea,
   display: flex;
   -ms-flex-pack: center;
       justify-content: center;
-  padding-bottom: 2em;
+  padding: 0 1em 2em 1em;
+}
+
+@media (max-width: 650px) {
+  .selling-points .wrap {
+    text-align: center;
+  }
 }
 
 .selling-points .wrap h3 {
@@ -482,17 +875,25 @@ textarea,
   display: -ms-flexbox;
   display: flex;
   gap: 2%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .selling-points .points .point {
-  -ms-flex: 25%;
-      flex: 25%;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: column;
       flex-direction: column;
   -ms-flex-align: center;
       align-items: center;
+  padding-bottom: 2em;
+}
+
+@media (min-width: 650px) {
+  .selling-points .points .point {
+    -ms-flex: 25%;
+        flex: 25%;
+  }
 }
 
 .selling-points .points .point .icon {
@@ -533,11 +934,17 @@ textarea,
 }
 
 .curve {
-  height: 200px;
   background-color: white;
+  height: 100px;
   border-bottom-left-radius: 250% 200%;
   border-bottom-right-radius: 250% 200%;
   z-index: 10;
   width: 100%;
   position: absolute;
+}
+
+@media (min-width: 650px) {
+  .curve {
+    height: 200px;
+  }
 }
