--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -2,7 +2,6 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   box-sizing: border-box;
-  font-size: $font-size-root;
 }
 
 *,
@@ -53,6 +52,11 @@ button:focus {
   outline: 5px auto -webkit-focus-ring-color;
 }
 
+h2 {
+  font-size: 35px;
+  font-weight: 400;
+}
+
 fieldset {
   border: 0;
   margin: 0;
@@ -74,6 +78,8 @@ ul {
 
 nav ul {
 	list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 //
