--- a/css/style.css
+++ b/css/style.css
@@ -388,12 +388,18 @@ textarea,
   }
 }
 
+.header .logo {
+  padding-top: 10px;
+}
+
 .header .logo img {
   height: 66px;
 }
 
-.header .nav-wrapper {
-  display: none;
+@media (max-width: 650px) {
+  .header .nav-wrapper {
+    display: none;
+  }
 }
 
 .header .nav-wrapper ul ul {
@@ -452,7 +458,7 @@ textarea,
   display: -ms-flexbox;
   display: flex;
   width: 35px;
-  height: 1px;
+  height: 2px;
   margin-bottom: 7px;
   position: relative;
   border-radius: 3px;
@@ -460,6 +466,29 @@ textarea,
   z-index: 100;
   transform-origin: 8px -2px;
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+
+.menu-toggle::after {
+  content: '';
+  height: 60px;
+  width: 60px;
+  position: absolute;
+  border: 2px solid black;
+  background: #F2FF00;
+  border-radius: 50px;
+  top: 26px;
+  right: 20px;
+}
+
+.menu-toggle::before {
+  content: '';
+  height: 60px;
+  width: 60px;
+  position: absolute;
+  border: 2px solid black;
+  border-radius: 50px;
+  top: 27px;
+  right: 24px;
 }
 
 .mobile-nav-container {
@@ -481,7 +510,7 @@ textarea,
   position: absolute;
   right: 0;
   background: #00C9FF;
-  top: 84px;
+  top: -4px;
   display: block;
   width: 100%;
   text-align: center;
@@ -495,7 +524,7 @@ textarea,
 }
 
 .mobile-menu-open nav {
-  width: 300px;
+  margin-top: 11em;
 }
 
 .mobile-menu-open nav li {
@@ -539,7 +568,7 @@ textarea,
 
 @media (min-width: 650px) {
   .hero .hero-wrap {
-    padding: 0 0 5em 5em;
+    padding: 0 0 5em 0;
   }
 }
 
@@ -567,12 +596,12 @@ textarea,
 
 @media (min-width: 650px) {
   .hero .hero-wrap .copy h2 {
+    line-height: 1;
     font-size: 60px;
   }
 }
 
 .hero .hero-wrap .copy h2:nth-child(2) {
-  line-height: 0.5;
   color: #00C9FF;
   margin-bottom: 1em;
 }
@@ -914,6 +943,12 @@ textarea,
   width: 80%;
   text-align: center;
   padding-top: 8px;
+}
+
+@media (min-width: 650px) {
+  .selling-points .points .point p {
+    width: 50%;
+  }
 }
 
 .selling-points .button-wrap {
