--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -7,12 +7,15 @@
     padding: 2em 4em;
   }
   .logo {
+    padding-top: 10px;
     img {
       height: 66px;
     }
   }
   .nav-wrapper {
-    display: none;
+    @media (max-width: $phone-l) {
+      display: none;
+    }
     ul ul {
       display: none;
     }
@@ -51,23 +54,45 @@
   @media (min-width: $tablet-m) {
     display: none;
   }
-    margin-right: 18px;
-    height: 15px;
-    .line {
-      display: flex;
-      width: 35px;
-      height: 1px;
-      margin-bottom: 7px;
-      position: relative;
-      border-radius: 3px;
-      background: black;
-      z-index: 100;
-      transform-origin: 8px -2px;
-      transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                  background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                  opacity 0.55s ease;
-    }
-  }      
+  margin-right: 18px;
+  height: 15px;
+  .line {
+    display: flex;
+    width: 35px;
+    height: 2px;
+    margin-bottom: 7px;
+    position: relative;
+    border-radius: 3px;
+    background: black;
+    z-index: 100;
+    transform-origin: 8px -2px;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+  }
+}
+
+.menu-toggle::after {
+  content: '';
+  height: 60px;
+  width: 60px;
+  position: absolute;
+  border: 2px solid black;
+  background: #F2FF00;
+  border-radius: 50px;
+  top: 26px;
+  right: 20px;
+}
+.menu-toggle::before {
+  content: '';
+  height: 60px;
+  width: 60px;
+  position: absolute;
+  border: 2px solid black;
+  border-radius: 50px;
+  top: 27px;
+  right: 24px;
+}
 
 .mobile-nav-container {
   display: none;
@@ -85,7 +110,7 @@
   position: absolute;
   right: 0;
   background: $blue;
-  top: 84px;
+  top: -4px;
   display: block;
   width: 100%;
   text-align: center;
@@ -94,7 +119,7 @@
   text-transform: uppercase;
   justify-content: space-between;
   nav {
-    width: 300px;
+    margin-top: 11em;
     li {
       padding: 10px 0;
     }
