--- a/sass/_latest-news.scss
+++ b/sass/_latest-news.scss
@@ -72,7 +72,7 @@
       }
     }
   }
-  
+
   .cta-block {
     display: flex;
     flex-wrap: wrap;
@@ -84,8 +84,10 @@
       padding: 3em;
     }
     .btn {
-      margin-top: 3em;
       width: 250px;
+      @media (max-width: $phone-l) {
+        margin-top: 3em;
+      }
     }
     .shaddow {
       width: 250px;
